# Peach

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: cd.yaml  ci.yaml
alembic/: env.py
alembic/versions/: 2026_05_10_0001_initial_reference_tables.py  2026_05_11_0002_phase1_membership_and_prices.py  2026_05_11_0003_phase2_indicators.py  2026_05_11_0004_country_code_filter.py
config/: settings.py
db/: Models.py  session.py
peach/: __init__.py
peach/config/: __init__.py  settings.py
peach/db/: __init__.py  base.py  session.py
peach/db/models/: __init__.py  auth.py  indicators.py  membership.py  prices.py  reference.py
peach/indicators/: __init__.py  engine.py  registry.py  snapshot_writer.py
peach/ingestion/: __init__.py  base.py  http.py  orchestrator.py  writers.py
peach/ingestion/sources/: __init__.py  issuer_csv_membership.py  stooq_source.py  wikipedia_membership.py  yfinance_source.py
peach/scheduling/: __init__.py  daily_eod.py
scripts/: __init__.py  backfill_prices.py  bootstrap_universe.py  create_user.py  seed_indicators.py
src/stock_tracker/: config.py  update_prices.py  update_tickers.py
src/stock_tracker/apis/: prices.py  stock_tracker_backend.py  ticker.py
src/stock_tracker/config/: settings.py
src/stock_tracker/prices/: fetch.py  service.py  storage.py  storage_base.py  storage_factory.py  storage_postgres.py
src/stock_tracker/tickers/: fetch.py  service.py  storage.py  storage_base.py  storage_factory.py  storage_postgres.py
src/stock_tracker/utils/: date_util.py  file_util.py  logging_config.py  price_parquet_read.py
tests/: Python.lnk  __init__.py  conftest.py
tests/fixtures/: invesco_qqq_sample.csv  ishares_ivv_sample.csv  ishares_xiu_sample.csv  stooq_aapl_sample.csv  wikipedia_sp500_sample.html  wikipedia_tsx60_sample.html
tests/stock_tracker/apis/: conftest.py  price_test.py  tickers_test.py
tests/stock_tracker/prices/: fetch_test.py  service_test.py  storage_test.py
tests/stock_tracker/tickers/: fetch_test.py  service_test.py  storage_test.py
tests/unit/: __init__.py  test_canadian_listings.py  test_indicators.py  test_membership_sources.py  test_phase1_metadata.py  test_smoke.py  test_stooq_source.py
